test_regress/t/t_func_nansi_bad.out
%Error: t/t_func_nansi_bad.v:13:14: Non-ANSI I/O declaration of signal conflicts with type declaration: 'bad1'
   13 |     shortint bad1;   
      |              ^~~~
        t/t_func_nansi_bad.v:12:18: ... Location of other declaration
   12 |     input [15:0] bad1;
      |                  ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_func_nansi_bad.v:18:7: Non-ANSI I/O declaration of signal conflicts with type declaration: 'bad2'
   18 |     T bad2;   
      |       ^~~~
        t/t_func_nansi_bad.v:17:18: ... Location of other declaration
   17 |     input [31:0] bad2;
      |                  ^~~~
%Error: t/t_func_nansi_bad.v:23:15: Non-ANSI I/O declaration of signal conflicts with type declaration: 'bad3'
   23 |     reg [3:0] bad3;   
      |               ^~~~
        t/t_func_nansi_bad.v:22:17: ... Location of other declaration
   22 |     input [7:0] bad3;
      |                 ^~~~
%Error: t/t_func_nansi_bad.v:28:9: Non-ANSI I/O declaration of signal conflicts with type declaration: 'bad4'
   28 |     reg bad4;
      |         ^~~~
        t/t_func_nansi_bad.v:27:17: ... Location of other declaration
   27 |     input [7:0] bad4;
      |                 ^~~~
%Error: t/t_func_nansi_bad.v:29:9: Duplicate declaration of signal: 'bad4'
   29 |     reg bad4;   
      |         ^~~~
        t/t_func_nansi_bad.v:27:17: ... Location of original declaration
   27 |     input [7:0] bad4;
      |                 ^~~~
%Error: t/t_func_nansi_bad.v:34:17: Duplicate declaration of signal: 'bad5'
   34 |     input [7:0] bad5;   
      |                 ^~~~
        t/t_func_nansi_bad.v:33:17: ... Location of original declaration
   33 |     input [7:0] bad5;
      |                 ^~~~
%Error: t/t_func_nansi_bad.v:35:9: Non-ANSI I/O declaration of signal conflicts with type declaration: 'bad5'
   35 |     reg bad5;
      |         ^~~~
        t/t_func_nansi_bad.v:33:17: ... Location of other declaration
   33 |     input [7:0] bad5;
      |                 ^~~~
%Error: Exiting due to
